# HuffmanCompressor

./: .gitignore  CMakeLists.txt  README.md  code_test.cpp  code_test.txt  codigo_comprimido.huff  compressor  contador_frequencia  tabela_cpp.freq
.github/workflows/: ci.yml
docs/: report.md  results.csv
docs/compressor_md/: design.md
docs/report_work/: relatorio.md  relatorio.tex
examples/codes_test/: Tarefa.java  medium_code.java  medium_code.js  readme.md  simple_code.py  simple_code.ts
examples/huff_generate/decompressed_code/: readme.md
examples/small_texts/: README.md
examples/tabelas_freq/: readme.md
include/compressor/: compressor.h
include/huffman/: bit_stream.h  huffman_tree.h
scripts/: compare_compressors.sh  full_test.sh  generate_dataset.sh
src/compressor/: compressor.cpp  main.cpp
src/freq_counter/: main.cpp
src/lib/: bit_stream.cpp  huffman_tree.cpp  utils.cpp
tests/integration/: README.md
tests/unit/: README.md
